[project]
name = "logfire-code-source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "logfire>=1.0.1",
    "uvicorn>=0.31.1",
]

[tool.uv.sources]
logfire = { git = "https://github.com/pydantic/logfire" }
